--- a/flask-small-blog/app/templates/login.html
+++ b/flask-small-blog/app/templates/login.html
@@ -10,7 +10,7 @@
             openid = openid.substr(0, u) + user
         }
         form = document.forms['login'];
-        form.elements['openid'].value = open.id
+        form.elements['openid'].value = openid
     }
     </script>
 <h1>Sign In</h1>
