--- a/flask-small-blog/app/templates/base.html
+++ b/flask-small-blog/app/templates/base.html
@@ -9,8 +9,23 @@
     {% endif %}
 </head>
 <body>
-<div>Microblog:<a href="/index"></a></div>
+<div>Microblog:
+    <a href={{ url_for('index') }}>home</a>
+    {% if g.user.is_authenticated %}
+    | <a href="{{ url_for('user',nickname = g.user.nickname) }}">Your Profile</a>
+        | <a href="{{ url_for('logout') }}"></a>
+    {% endif %}
+</div>
 <hr>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
 {% block content %}
 {% endblock %}
 </body>
