--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Sign In</h1>
+<h1>Sign In</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
+        <!--保护表单免受csrf攻击,为了保护表单，你需要做的只是在表单中包含这个隐藏字段以及在
+        Flask 配置中定义 SECRET_KEY 变量 -->
         <p>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
@@ -13,7 +15,7 @@
         </p>
         <p>
             {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
+            {{ form.password(size=32)}}<br>
             {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
