--- a/flask-small-blog/app/templates/base.html
+++ b/flask-small-blog/app/templates/base.html
@@ -13,7 +13,7 @@
     <a href={{ url_for('index') }}>home</a>
     {% if g.user.is_authenticated %}
     | <a href="{{ url_for('user',nickname = g.user.nickname) }}">Your Profile</a>
-        | <a href="{{ url_for('logout') }}"></a>
+        | <a href="{{ url_for('logout') }}">Logout</a>
     {% endif %}
 </div>
 <hr>
