--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -1,27 +1,31 @@
 <html>
     <head>
-        {% if title %}
-        <title>{{ title }} - Microblog</title>
-        {% else %}
-        <title>Welcome to Microblog</title>
-        {% endif %}
+      {% if title %}
+      <title>{{ title }} - Microblog</title>
+      {% else %}
+      <title>Welcome to Microblog</title>
+      {% endif %}
     </head>
     <body>
-        <div>
-            Microblog:
+        <div>Microblog:
             <a href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+            <a href="{{ url_fir('logout')}}"></a>
+            {% endif %}
         </div>
         <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
+        {% with message = get_flashed_messages() %}
+        {% if message %}
         <ul>
             {% for message in messages %}
-            <li>{{ message }}</li>
+            <li>{{ message }}</li>sqlite_master
             {% endfor %}
         </ul>
         {% endif %}
         {% endwith %}
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </body>
 </html>
